--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
                     <strong class="badge">5</strong>
                   </a>
 
-                  <div class="my-menu sm-hidden">
+                  <div class="my-menu is-active sm-hidden">
                     <button
-                      class="my-menu-button is-active"
+                      class="my-menu-button "
                       type="button"
                       aria-label="마이메뉴 열기 버튼"
                     >
@@ -281,7 +281,7 @@
       </nav>
     </aside>
 
-    <aside class="search-modal lg-hidden">
+    <aside class="search-modal  lg-hidden">
       <div class="container">
         <div class="row">
           <div class="col-sm-4">
@@ -308,7 +308,7 @@
               </header>
 
               <!-- NOTE:최근 검색어가 존재할 경우 -->
-             <!-- <div class="search-history-content">
+             <div class="search-history-content">
                 <ol class="search-history-list">
                   <li  class="search-history-item">
                     <button class="word-button" type="button">김버그</button>
@@ -332,12 +332,12 @@
                     </button>
                   </li>
                 </ol>
-              </div> -->
+              </div>
 
               <!-- NOTE:최근 검색어가 존재하지 않을 경우 -->
-              <div class="search-history-content">
+              <!-- <div class="search-history-content">
                 <p class="placeholder">최근 검색한 내역이 없습니다.</p>
-              </div>
+              </div> -->
             </section>
           </div>
         </div>
