--- a/index.html
+++ b/index.html
@@ -58,13 +58,64 @@
               </div>
 
               <div class="gnb-right">
-                <div class="input-group lg-only">
-                  <i class="ic-search" aria-hidden></i>
-                  <input
-                    class="form-input"
-                    type="text"
-                    placeholder="스토어검색"
-                  />
+                <div class="gnb-search">
+                  <div class="input-group lg-only">
+                    <i class="ic-search" aria-hidden></i>
+                    <input
+                      class="form-input"
+                      type="text"
+                      placeholder="스토어검색"
+                    />
+                  </div>
+
+                  <section class="search-history">
+                    <header class="search-history-header">
+                      <h2 class="title">최근 검색어</h2>
+                      <button type="button">전체 삭제</button>
+                    </header>
+
+                    <!-- NOTE:최근 검색어가 존재할 경우 -->
+                    <div class="search-history-content">
+                      <ol class="search-history-list">
+                        <li class="search-history-item">
+                          <button class="word-button" type="button">
+                            김버그
+                          </button>
+                          <button
+                            class="delete-button"
+                            type="button"
+                            aria-label="검색어 삭제"
+                          >
+                            <i class="ic-close"></i>
+                          </button>
+                        </li>
+                        <li class="search-history-item">
+                          <button class="word-button" type="button">
+                            김버그
+                          </button>
+                          <button
+                            class="delete-button"
+                            type="button"
+                            aria-label="검색어 삭제"
+                          >
+                            <i class="ic-close"></i>
+                          </button>
+                        </li>
+                        <li class="search-history-item">
+                          <button class="word-button" type="button">
+                            김버그
+                          </button>
+                          <button
+                            class="delete-button"
+                            type="button"
+                            aria-label="검색어 삭제"
+                          >
+                            <i class="ic-close"></i>
+                          </button>
+                        </li>
+                      </ol>
+                    </div>
+                  </section>
                 </div>
 
                 <!-- NOTE : 로그인을 한 경우 -->
@@ -102,9 +153,9 @@
                     <strong class="badge">5</strong>
                   </a>
 
-                  <div class="my-menu is-active sm-hidden">
+                  <div class="my-menu sm-hidden">
                     <button
-                      class="my-menu-button "
+                      class="my-menu-button"
                       type="button"
                       aria-label="마이메뉴 열기 버튼"
                     >
@@ -281,7 +332,7 @@
       </nav>
     </aside>
 
-    <aside class="search-modal  lg-hidden">
+    <aside class="search-modal lg-hidden">
       <div class="container">
         <div class="row">
           <div class="col-sm-4">
@@ -301,33 +352,42 @@
               </div>
             </header>
 
-            <div class="search-history">
-              <header  class="search-history-header">
+            <section class="search-history">
+              <header class="search-history-header">
                 <h2 class="title">최근 검색어</h2>
                 <button type="button">전체 삭제</button>
               </header>
 
               <!-- NOTE:최근 검색어가 존재할 경우 -->
-             <div class="search-history-content">
+              <div class="search-history-content">
                 <ol class="search-history-list">
-                  <li  class="search-history-item">
+                  <li class="search-history-item">
                     <button class="word-button" type="button">김버그</button>
                     <button
-                    class="delete-button" type="button" aria-label="검색어 삭제">
+                      class="delete-button"
+                      type="button"
+                      aria-label="검색어 삭제"
+                    >
                       <i class="ic-close"></i>
                     </button>
                   </li>
                   <li class="search-history-item">
                     <button class="word-button" type="button">김버그</button>
                     <button
-                    class="delete-button" type="button" aria-label="검색어 삭제">
+                      class="delete-button"
+                      type="button"
+                      aria-label="검색어 삭제"
+                    >
                       <i class="ic-close"></i>
                     </button>
                   </li>
                   <li class="search-history-item">
                     <button class="word-button" type="button">김버그</button>
                     <button
-                    class="delete-button" type="button" aria-label="검색어 삭제">
+                      class="delete-button"
+                      type="button"
+                      aria-label="검색어 삭제"
+                    >
                       <i class="ic-close"></i>
                     </button>
                   </li>
