--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                       />
                     </div>
 
-                    <section class="search-history">
+                    <section class="search-history is-active">
                       <header class="search-history-header">
                         <h2 class="title">최근 검색어</h2>
                         <button type="button">전체 삭제</button>
@@ -257,7 +257,7 @@
               <i class="ic-chevron" aria-hidden></i>
               <a href="/">계절가전</a>
               <i class="ic-chevron" aria-hidden></i>
-              <a href="/">전기히터/온풍기</a>
+              <a href="/">전기히터 / 온풍기</a>
               <i class="ic-chevron" aria-hidden></i>
               <a href="/">전기히터</a>
               <i class="ic-chevron" aria-hidden></i>
