🚧  Import tiny-slider.js and initialize productCarousel

--- a/index.html
+++ b/index.html
@@ -566,14 +566,7 @@
     <div class="overlay" aria-hidden></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
-  <script>
-    var slider = tns({
-    container: '.product-carousel .slider-list',
-    items: 3,
-    slideBy: 'page',
-    autoplay: true
-  });
-  </script>
+ <script src="./productCarousel.js"></script>
   
   </body>
 </html>
