--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
       href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css">
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.4/tiny-slider.css"
+    />
     <link rel="stylesheet" href="./style.css" />
   </head>
 
@@ -267,56 +270,108 @@
         </div>
         <div class="row">
           <div class="col-sm-4 col-md-6 col-lg-7">
-            <div  class="product-carousel" role="region">
+            <div class="product-carousel" role="region">
               <div class="product-carousel-slider">
                 <ol class="slider-list">
-                  <li class="slider-item" role="tabpanel" aria-labelledby="product-carousel-tab-1">
+                  <li
+                    class="slider-item"
+                    role="tabpanel"
+                    aria-labelledby="product-carousel-tab-1"
+                  >
                     <figure>
                       <img src="/assets/images/img-product-01.jpg" alt="" />
-                      <figcaption class="visually-hidden">보아르 전기히터 상세이미지1</figcaption>
+                      <figcaption class="visually-hidden">
+                        보아르 전기히터 상세이미지1
+                      </figcaption>
                     </figure>
                   </li>
-                  <li class="slider-item" role="tabpanel" aria-labelledby="product-carousel-tab-2">
+                  <li
+                    class="slider-item"
+                    role="tabpanel"
+                    aria-labelledby="product-carousel-tab-2"
+                  >
                     <figure>
                       <img src="/assets/images/img-product-02.jpg" alt="" />
-                      <figcaption class="visually-hidden">보아르 전기히터 상세이미지2</figcaption>
+                      <figcaption class="visually-hidden">
+                        보아르 전기히터 상세이미지2
+                      </figcaption>
                     </figure>
                   </li>
-                  <li class="slider-item" role="tabpanel" aria-labelledby="product-carousel-tab-3">
+                  <li
+                    class="slider-item"
+                    role="tabpanel"
+                    aria-labelledby="product-carousel-tab-3"
+                  >
                     <figure>
                       <img src="/assets/images/img-product-03.jpg" alt="" />
-                      <figcaption class="visually-hidden">보아르 전기히터 상세이미지3</figcaption>
+                      <figcaption class="visually-hidden">
+                        보아르 전기히터 상세이미지3
+                      </figcaption>
                     </figure>
                   </li>
-                  <li class="slider-item" role="tabpanel" aria-labelledby="product-carousel-tab-4">
+                  <li
+                    class="slider-item"
+                    role="tabpanel"
+                    aria-labelledby="product-carousel-tab-4"
+                  >
                     <figure>
                       <img src="/assets/images/img-product-04.jpg" alt="" />
-                      <figcaption class="visually-hidden">보아르 전기히터 상세이미지4</figcaption>
+                      <figcaption class="visually-hidden">
+                        보아르 전기히터 상세이미지4
+                      </figcaption>
                     </figure>
                   </li>
                 </ol>
               </div>
-        
+
               <div class="product-carousel-thumbnail">
                 <ol class="thumbnail-list" role="tablist">
-                  <li class="thumbnail-item" id="product-carousel-tab-1" role="tab">
+                  <li
+                    class="thumbnail-item"
+                    id="product-carousel-tab-1"
+                    role="tab"
+                  >
                     <button type="button">
-                      <img src="./assets/images/img-product-01.jpg" alt="1번 이미지" />
+                      <img
+                        src="./assets/images/img-product-01.jpg"
+                        alt="1번 이미지"
+                      />
                     </button>
                   </li>
-                  <li class="thumbnail-item" id="product-carousel-tab-2" role="tab">
+                  <li
+                    class="thumbnail-item"
+                    id="product-carousel-tab-2"
+                    role="tab"
+                  >
                     <button type="button">
-                      <img src="./assets/images/img-product-02.jpg" alt="2번 이미지" />
+                      <img
+                        src="./assets/images/img-product-02.jpg"
+                        alt="2번 이미지"
+                      />
                     </button>
                   </li>
-                  <li class="thumbnail-item" id="product-carousel-tab-3" role="tab">
+                  <li
+                    class="thumbnail-item"
+                    id="product-carousel-tab-3"
+                    role="tab"
+                  >
                     <button type="button">
-                      <img src="./assets/images/img-product-03.jpg" alt="3번 이미지" />
+                      <img
+                        src="./assets/images/img-product-03.jpg"
+                        alt="3번 이미지"
+                      />
                     </button>
-                  </li class="thumbnail-item" id="product-carousel-tab-4" role="tab">
-                  <li>
+                  </li>
+                  <li
+                    class="thumbnail-item"
+                    id="product-carousel-tab-4"
+                    role="tab"
+                  >
                     <button type="button">
-                      <img src="./assets/images/img-product-04.jpg" alt="4번 이미지" />
+                      <img
+                        src="./assets/images/img-product-04.jpg"
+                        alt="4번 이미지"
+                      />
                     </button>
                   </li>
                 </ol>
@@ -325,8 +380,6 @@
           </div>
         </div>
       </div>
-
-     
     </main>
 
     <footer class="global-footer">
@@ -566,7 +619,6 @@
     <div class="overlay" aria-hidden></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
- <script src="./productCarousel.js"></script>
-  
+    <script src="./productCarousel.js"></script>
   </body>
 </html>
