🚧 Add missing classNames

--- a/index.html
+++ b/index.html
@@ -405,8 +405,8 @@
               <div class="product-info-price">
                 <div class="info-original-price">
                   <div class="discount-rate">
-                    <span>34</span>
-                    <span>%</span>
+                    <span class="rate">34</span>
+                    <span class="percent">%</span>
                   </div>
 
                   <div class="price-off">
