--- a/index.html
+++ b/index.html
@@ -402,7 +402,6 @@
                 </div>
               </header>
 
-
               <!-- NOTE: 모바일용 가격 -->
               <div class="product-info-price sm-only">
                 <div class="info-original-price">
@@ -422,10 +421,11 @@
                     <strong class="amount">32,900</strong>
                     <span class="currency">원</span>
                   </div>
+
                   <strong class="tag-red">특가</strong>
                 </div>
 
-                <p class="point">
+                <p class="info-point">
                   <strong>987P</strong>
                   적립해드립니다. (VIP 3배 혜택 적용됨)
                 </p>
@@ -433,7 +433,7 @@
 
               <!-- NOTE: 태블릿 이후 가격 -->
               <div class="product-info-price sm-hidden">
-                <div class="info-class-wrap">
+                <div class="info-price-wrapper">
                   <div class="discount-rate">
                     <span class="rate">34</span>
                     <span class="percent">%</span>
@@ -454,8 +454,9 @@
                       <strong class="tag-red">특가</strong>
                     </div>
                   </div>
+                </div>
 
-                <p class="point">
+                <p class="info-point">
                   <strong>987P</strong>
                   적립해드립니다. (VIP 3배 혜택 적용됨)
                 </p>
@@ -466,6 +467,54 @@
                 <strong class="tag-gray">무료배송</strong>
               </div>
             </section>
+
+            <form class="order-form lg-only" action="/" method="POST">
+              <div class="order-inputs">
+                <div class="select-group is-active">
+                  <select class="form-select" id="select-1" required>
+                    <option value="">선택</option>
+                    <option value="1">선택사항 1</option>
+                    <option value="2">선택사항 2</option>
+                    <option value="3">선택사항 3</option>
+                    <option value="4">선택사항 4</option>
+                    <option value="5">선택사항 5</option>
+                  </select>
+                  <i class="ic-caret" aria-hidden></i>
+                </div>
+                <div class="select-group" id="select-2">
+                  <select class="form-select">
+                    <option value="">추가상품 (선택)</option>
+                    <option value="1">선택사항 1</option>
+                    <option value="2">선택사항 2</option>
+                    <option value="3">선택사항 3</option>
+                    <option value="4">선택사항 4</option>
+                    <option value="5">선택사항 5</option>
+                  </select>
+                  <i class="ic-caret" aria-hidden></i>
+                </div>
+              </div>
+
+                <dl class="order-summary">
+                  <dt>주문금액</dt>
+                  <dd>
+                    <output for="select-1 select-2">
+                      <div class="price-20">
+                        <strong class="amount">0</strong>
+                        <span class="currency">원</span>
+                      </div>
+                    </output>
+                  </dd>
+                </dl>
+
+              <div class="button-group">
+                <button class="btn-outlined btn-55" type="button">
+                  장바구니
+                </button>
+                <button class="btn-primary btn-55" type="submit">
+                  바로구매
+                </button>
+              </div>
+            </form>
           </div>
         </div>
       </div>
