--- a/index.html
+++ b/index.html
@@ -481,8 +481,8 @@
                   </select>
                   <i class="ic-caret" aria-hidden></i>
                 </div>
-                <div class="select-group" id="select-2">
-                  <select class="form-select">
+                <div class="select-group">
+                  <select class="form-select" id="select-2">
                     <option value="">추가상품 (선택)</option>
                     <option value="1">선택사항 1</option>
                     <option value="2">선택사항 2</option>
@@ -494,17 +494,59 @@
                 </div>
               </div>
 
-                <dl class="order-summary">
-                  <dt>주문금액</dt>
-                  <dd>
-                    <output for="select-1 select-2">
-                      <div class="price-20">
-                        <strong class="amount">0</strong>
-                        <span class="currency">원</span>
-                      </div>
-                    </output>
-                  </dd>
-                </dl>
+              <div class="order-checkout">
+                <ul class="checkout-list">
+                  <li class="checkout-item">
+                    <div class="checkout-card">
+                      <header class="checkout-header">
+                        <h4 class="checkout-title">
+                          추가상품 - 맛있는 제주 감귤을 직배송 / 제주도 귤 판매
+                          1위 믿고 구매하세요.
+                        </h4>
+                        <button
+                          class="delete-button"
+                          type="button"
+                          aria-label="해당 상품을 삭제하기"
+                        >
+                          <i class="ic-close" aria-hidden></i>
+                        </button>
+                      </header>
+
+                      <footer class="checkout-footer">
+                        <div class="checkout-select">
+                          <select id="checkout-item-1">
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                            <option value="4">4</option>
+                            <option value="5">5</option>
+                          </select>
+                          <i class="ic-caret" aria-hidden></i>
+                        </div>
+
+                        <output class="checkout-oust" for="checkout-item-1">
+                          <div class="price-16">
+                            <strong class="amount">32,900</strong>
+                            <span class="currency">원</span>
+                          </div>
+                        </output>
+                      </footer>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+
+              <dl class="order-summary">
+                <dt>주문금액</dt>
+                <dd>
+                  <output for="select-1 select-2">
+                    <div class="price-20">
+                      <strong class="amount">0</strong>
+                      <span class="currency">원</span>
+                    </div>
+                  </output>
+                </dd>
+              </dl>
 
               <div class="button-group">
                 <button class="btn-outlined btn-55" type="button">
