--- a/component.html
+++ b/component.html
@@ -194,5 +194,37 @@
         <i class="ic-chevron" aria-hidden></i>
       </button>
     </header>
+
+    <div>
+      <!--  -->
+      <table class="product-table">
+        <tbody>
+          <tr>
+            <th scope="row">배송</th>
+            <td>일반배송</td>
+          </tr>
+          <tr>
+            <th scope="row">배송비</th>
+            <td>무료배송</td>
+          </tr>
+          <tr>
+            <th scope="row">배송불가 지역</th>
+            <td>배송불가 지역이 없습니다.</td>
+          </tr>
+          <tr>
+            <th scope="row">반품배송비</th>
+            <td>2,500원 (최초 배송비가 무료인 경우 5,000원 부과)</td>
+          </tr>
+          <tr>
+            <th scope="row">교환배송비</th>
+            <td>5,000원</td>
+          </tr>
+          <tr>
+            <th scope="row">보내실 곳</th>
+            <td>(00000) 서울 종로구 누하동</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
   </body>
 </html>
