💄 Implement a shared component style: product-section

--- a/index.html
+++ b/index.html
@@ -725,7 +725,10 @@
                 </table>
               </div>
             </section>
-            <div class="product-section-divider sm-only" aria-hidden></div>
+            
+            <!-- 구분선 -->
+            <div class="product-section-divider sm-only" aria-hidden></div>     
+            <!--  -->
           </div>
         </div>
       </div>
