💄 Handel toggle state of product-spec in mobile screen

--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
         <div class="row">
           <div class="col-sm-4 col-lg-8">
             <section
-              class="product-section product-spec"
+              class="product-section product-spec is-open"
               id="product-spec"
               role="tabpanel"
             >
@@ -725,10 +725,8 @@
                 </table>
               </div>
             </section>
-            
-            <!-- 구분선 -->
-            <div class="product-section-divider sm-only" aria-hidden></div>     
-            <!--  -->
+
+            <div class="product-section-divider sm-only" aria-hidden></div>
           </div>
         </div>
       </div>
