--- a/index.html
+++ b/index.html
@@ -817,7 +817,6 @@
                   </div>
                 </div>
 
-                <!-- 리뷰카드 -->
                 <ol class="review-list">
                   <li class="review-item">
                     <article class="review-card">
@@ -1106,6 +1105,27 @@
               </div>
             </section>
             <div class="product-section-divider sm-only" aria-hidden></div>
+
+            <!-- NOTE::리뷰가 0개일 경우 -->
+            <!-- <section
+              class="product-section product-review"
+              id="product-review"
+              role="tabpanel"
+            >
+              <header class="product-section-header">
+                <h1 class="title">리뷰</h1>
+                <strong class="badge" aria-label="개">0</strong>
+                <a class="text-button" href="/">리뷰쓰기</a>
+              </header>
+
+              <div class="product-section-content">
+                <p class="review-empty">
+                  첫 리뷰를 남겨주세요!<br />
+                  최대 <strong>500P</strong>를 드립니다.
+                </p>
+              </div>
+            </section>
+            <div class="product-section-divider sm-only" aria-hidden></div> -->
           </div>
         </div>
       </div>
