🚧 Add addtional markup for user-gallery structure

--- a/index.html
+++ b/index.html
@@ -621,34 +621,91 @@
                 <h1 class="title">유저들의 스타일링샷</h1>
                 <strong class="badge" aria-label="461개">461</strong>
 
-                <a
-                  class="icon-button is-right"
-                  href="/"
-                  aria-label="더보기"
-                >
+                <a class="icon-button is-right" href="/" aria-label="더보기">
                   <i class="ic-chevron" aria-hidden></i>
-                </ㅁ>
+                </a>
               </header>
 
               <div class="product-section-content">
-                <ol >
-                  <li>
-                   <div class="gallery-card">
-                    <figure  class="gallery-card-image">
-                      <img src="./assets/images/img-review-01.jpg" alt="">
-                      <figcaption class="visually-hidden">김버그님의 스타일링샷</figcaption>
-                    </figure>
+                <div class="user-gallery" role="region">
+                  <div class="user-gallery-slider">
+                    <ol class="slider-list">
+                      <li class="slider-item">
+                        <div class="gallery-card">
+                          <figure class="gallery-card-image">
+                            <img
+                              src="./assets/images/img-review-01.jpg"
+                              alt=""
+                            />
+                            <figcaption class="visually-hidden">
+                              김버그님의 스타일링샷
+                            </figcaption>
+                          </figure>
 
-                   <div  class="gallery-card-detail">
-                    <a class="avatar-32" href="/">
-                      <img src="./assets/images/img-user-01.jpg" alt="사딸라아저씨" />
-                    </a>
-                    <a class="user-name"href="/">김버그</a>
-                    <span class="order">1/146</span>
-                   </div>
-                   </div>
-                  </li>
-                </ol>
+                          <div class="gallery-card-detail">
+                            <a class="avatar-32" href="/">
+                              <img
+                                src="./assets/images/img-user-01.jpg"
+                                alt="사딸라아저씨"
+                              />
+                            </a>
+                            <a class="user-name" href="/">김버그</a>
+                            <span class="order">1/146</span>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="slider-item">
+                        <div class="gallery-card">
+                          <figure class="gallery-card-image">
+                            <img
+                              src="./assets/images/img-review-02.jpg"
+                              alt=""
+                            />
+                            <figcaption class="visually-hidden">
+                              보리님의 스타일링샷
+                            </figcaption>
+                          </figure>
+
+                          <div class="gallery-card-detail">
+                            <a class="avatar-32" href="/">
+                              <img
+                                src="./assets/images/img-user-02.gif"
+                                alt="커밋캐릭터"
+                              />
+                            </a>
+                            <a class="user-name" href="/">보리</a>
+                            <span class="order">2/146</span>
+                          </div>
+                        </div>
+                      </li>
+                      <li class="slider-item">
+                        <div class="gallery-card">
+                          <figure class="gallery-card-image">
+                            <img
+                              src="./assets/images/img-review-03.jpg"
+                              alt=""
+                            />
+                            <figcaption class="visually-hidden">
+                              벅스님의 스타일링샷
+                            </figcaption>
+                          </figure>
+
+                          <div class="gallery-card-detail">
+                            <a class="avatar-32" href="/">
+                              <img
+                                src="./assets/images/img-user-03.jpg"
+                                alt="곰"
+                              />
+                            </a>
+                            <a class="user-name" href="/">벅스</a>
+                            <span class="order">3/146</span>
+                          </div>
+                        </div>
+                      </li>
+                    </ol>
+                  </div>
+                  <div class="user-gallery-thumnail"></div>
+                </div>
               </div>
             </section>
 
