🚧 Initiate a new carousel: user-gallery

--- a/index.html
+++ b/index.html
@@ -1885,6 +1885,6 @@
     <div class="overlay" aria-hidden></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
-    <script src="./productCarousel.js"></script>
+    <script src="./productCarousels.js"></script>
   </body>
 </html>
